--- a/index.html
+++ b/index.html
@@ -1,90 +1,116 @@
-<script>
-/* =========================================================
-   C1 — DATA FLOW CORE (NO CALCULATIONS YET)
-   Purpose:
-   - Define instrument universe
-   - Define data model per symbol
-   - Prepare for scoring & top-10 selection
-   ========================================================= */
+<!DOCTYPE html>
+<html lang="lv">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Super Breakout LIVE</title>
 
-/* === 1. BINANCE FUTURES UNIVERSE (USDT only) === */
-const C1_UNIVERSE = [
-  "BTCUSDT","ETHUSDT","BNBUSDT","SOLUSDT","XRPUSDT",
-  "ADAUSDT","AVAXUSDT","DOGEUSDT","LINKUSDT","MATICUSDT",
-  "DOTUSDT","LTCUSDT","BCHUSDT","TRXUSDT","ATOMUSDT",
-  "OPUSDT","ARBUSDT","INJUSDT","APTUSDT","SUIUSDT"
-];
+  <style>
+    body {
+      margin: 0;
+      background: #0b0e11;
+      color: #cfd3dc;
+      font-family: Arial, sans-serif;
+    }
 
-/* === 2. PER-SYMBOL DATA MODEL === */
-function createSymbolState(symbol) {
-  return {
-    symbol,
-    timeframe: "15m",
+    #app {
+      display: flex;
+      flex-direction: column;
+      height: 100vh;
+    }
 
-    price: null,
-    lastUpdate: null,
+    #chart-wrapper {
+      position: relative;
+      flex: 1;
+    }
 
-    vacuum: {
-      active: false,
-      top: null,
-      bottom: null,
-      strength: 0
-    },
+    #chart {
+      width: 100%;
+      height: 100%;
+    }
 
-    compress: {
-      active: false,
-      range: null,
-      duration: 0
-    },
+    #overlay-layer {
+      position: absolute;
+      inset: 0;
+      pointer-events: none;
+    }
 
-    aggression: {
-      buy: 0,
-      sell: 0,
-      dominant: null
-    },
+    .zone {
+      position: absolute;
+      left: 5%;
+      width: 90%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-weight: bold;
+      letter-spacing: 3px;
+    }
 
-    breakout: {
-      probability: 0,
-      strength: 0,
-      direction: null
-    },
+    .vacuum {
+      top: 30%;
+      height: 18%;
+      background: rgba(0, 255, 150, 0.12);
+      border: 2px solid rgba(0, 255, 150, 0.6);
+      color: rgba(0, 255, 150, 0.35);
+      font-size: 32px;
+    }
 
-    score: 0 // <- top-10 atlasei
-  };
-}
+    .compress {
+      top: 55%;
+      height: 48px;
+      background: rgba(255, 180, 0, 0.18);
+      border: 2px solid rgba(255, 180, 0, 0.7);
+      color: rgba(255, 200, 80, 0.6);
+      font-size: 16px;
+      border-radius: 14px;
+    }
 
-/* === 3. GLOBAL SYSTEM STATE === */
-const SYSTEM = {
-  mode: "LIVE",
-  timeframe: "15m",
+    #metrics {
+      padding: 12px;
+      border-top: 1px solid #1e2329;
+      font-size: 14px;
+    }
+  </style>
+</head>
 
-  indicators: {
-    vacuum: true,
-    compress: true,
-    aggression: true
-  },
+<body>
+  <div id="app">
 
-  symbols: {},
-  top10: []
-};
+    <div id="chart-wrapper">
+      <div id="chart"></div>
 
-/* === 4. INITIALIZE ALL SYMBOL STATES === */
-C1_UNIVERSE.forEach(sym => {
-  SYSTEM.symbols[sym] = createSymbolState(sym);
-});
+      <div id="overlay-layer">
+        <div class="zone vacuum">VACUUM</div>
+        <div class="zone compress">COMPRESS</div>
+      </div>
+    </div>
 
-/* === 5. DEBUG VISIBILITY (temporary) === */
-console.log("C1 INITIALIZED");
-console.log("Universe size:", C1_UNIVERSE.length);
-console.log("System state:", SYSTEM);
+    <div id="metrics">
+      <strong>Metodikas</strong><br><br>
+      Savienojums: <b>LIVE</b><br>
+      Instruments: <b>BTCUSDT</b><br>
+      Timeframe: <b>15m</b><br>
+      (Forma / karkass)
+    </div>
 
-/* =========================================================
-   END OF C1
-   Next:
-   - C2: Live price feed (Binance WS)
-   - C3: Vacuum detection
-   - C4: Compress detection
-   - C5: Aggression math
-   - C6: Top-10 auto selection
-   ========================================================= */
-</script>
+  </div>
+
+  <script src="https://s3.tradingview.com/tv.js"></script>
+  <script>
+    new TradingView.widget({
+      container_id: "chart",
+      autosize: true,
+      symbol: "BINANCE:BTCUSDT",
+      interval: "15",
+      timezone: "Etc/UTC",
+      theme: "dark",
+      style: "1",
+      locale: "en",
+      hide_top_toolbar: false,
+      hide_legend: true,
+      allow_symbol_change: false,
+      save_image: false
+    });
+  </script>
+</body>
+</html>
